clean style and fixed projects position on mobile

--- a/css/footer.css
+++ b/css/footer.css
@@ -394,7 +394,6 @@
 .contact_btn_up{
   position: absolute;
   top: 78px;
-  right: -76px;
   align-items: center;
   justify-content: center;
   width: 38px;
