--- a/css/hero_mobile.css
+++ b/css/hero_mobile.css
@@ -165,7 +165,7 @@ html {
 
   .references_title_light {
     display: block;
-    font-size: 18px;
+    font-size: 16px;
     color: #ffffff;
     padding-top: 10px;
   }
